--- a/index.html
+++ b/index.html
@@ -19,33 +19,16 @@
                     <div class ="cartao_conteudo_pergunta">
                         <p>O que é JavaScript?</p></div>
                 </div>
-                 <div class ="cartao_conteudo_resposta">
+                 
+                <div class ="cartao_conteudo_resposta">
                         <p>O JavaScript é uma linguagem de programação.</p></div>
-            </article>
-
-            <article class ="cartao">
-                <div class ="cartao_conteudo">
-                    <h3>Programação</h3>
-                    <div class ="cartao_conteudo_pergunta">
-                        <p>O que é CSS?</p></div>
                 </div>
-                 <div class ="cartao_conteudo_resposta">
-                        <p>O CSS é uma linguagem de marcação.</p></div>
-            </article>
-
-            <article class ="cartao">
-                <div class ="cartao_conteudo">
-                    <h3>Geografia</h3>
-                    <div class ="cartao_conteudo_pergunta">
-                        <p>Qual é a capital do Paraná?</p></div>
                 </div>
-                 <div class ="cartao_conteudo_resposta">
-                        <p>A capital do Paraná é Curitiba.</p></div>
             </article>
         </section>
-    </main>
+       </main>
         <footer>
-            <p>Projeto desenvolvido por Eduardo Candoti Santos - sem fins lucrativos</p>
+            <p>Projeto desenvolvido por Maria Luiza Ivasita - sem fins lucrativos</p>
         </footer>
 </body>
 </html>
