--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
     <main>
         <section id ="container">
-            <article class ="cartao">
+            <!-- <article class ="cartao">
                 <div class ="cartao_conteudo">
                     <h3>Programação</h3>
                     <div class ="cartao_conteudo_pergunta">
@@ -24,11 +24,13 @@
                         <p>O JavaScript é uma linguagem de programação.</p></div>
                 </div>
                 </div>
-            </article>
+            </article> -->
         </section>
        </main>
         <footer>
             <p>Projeto desenvolvido por Maria Luiza Ivasita - sem fins lucrativos</p>
         </footer>
+        <script scr="app.js"></script>
+        <script scr="perguntas.js"></script>
 </body>
 </html>
