--- a/index.html
+++ b/index.html
@@ -17,12 +17,12 @@
                 <div class ="cartao_conteudo">
                     <h3>Programação</h3>
                     <div class ="cartao_conteudo_pergunta">
-                        <p>O que é JavaScript?</p></div>
+                        <p>O que é JavaScript?</p>
                 </div>
                  
                 <div class ="cartao_conteudo_resposta">
-                        <p>O JavaScript é uma linguagem de programação.</p></div>
-                </div>
+                        <p>O JavaScript é uma linguagem de programação.</p>
+                    </div>
                 </div>
             </article> -->
         </section>
