--- a/index.html
+++ b/index.html
@@ -6,31 +6,32 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
     
     <title>Flash Cards</title>
 </head>
+
 <body>
     <main>
-        <section id ="container">
-            <!-- <article class ="cartao">
-                <div class ="cartao_conteudo">
+        <section id="container">
+            <!-- <article class="cartao">
+                <div class="cartao_conteudo">
                     <h3>Programação</h3>
-                    <div class ="cartao_conteudo_pergunta">
+                    <div class="cartao_conteudo_pergunta">
                         <p>O que é JavaScript?</p>
-                </div>
-                 
-                <div class ="cartao_conteudo_resposta">
+                    </div>
+
+                    <div class="cartao_conteudo_resposta">
                         <p>O JavaScript é uma linguagem de programação.</p>
                     </div>
                 </div>
             </article> -->
         </section>
-       </main>
-        <footer>
-            <p>Projeto desenvolvido por Maria Luiza Ivasita - sem fins lucrativos</p>
-        </footer>
-        <script scr="app.js"></script>
-        <script scr="perguntas.js"></script>
+    </main>
+    <footer>
+        <p>Projeto desenvolvido por Eduardo Candoti Santos - sem fins lucrativos</p>
+    </footer>
+    <script src="app.js"></script>
+    <script src="perguntas.js"></script>
 </body>
+
 </html>
