--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </section>
     </main>
     <footer>
-        <p>Projeto desenvolvido por Eduardo Candoti Santos - sem fins lucrativos</p>
+        <p>Projeto desenvolvido por Maria Luiza Ivasita - sem fins lucrativos</p>
     </footer>
     <script src="app.js"></script>
     <script src="perguntas.js"></script>
